# video-downloader

./: .dockerignore  .gitignore  BILIBILI_API_GUIDE.md  Dockerfile  FLET_QUICK_START.md  FLET_WEB_GUI_PLAN.md  GUI_IMPLEMENTATION_PLAN.md  GUI_SUMMARY.md  KIVY_GUI_PLAN.md  LICENSE  PROJECT_STATUS.md  README.md  build_and_run.bat  build_and_run.sh  find_colors_issue.py  fix_all_flet.py  fix_constants.py  fix_icons.py  main.py  main_gui.py  pyproject.toml  requirements.txt  requirements_gui.txt  setup.py  simple_gui.py  test_debug.py  test_gui_functionality.py  test_integration.py
.github/workflows/: build.yml
src/: __init__.py  _version.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  config.py  exceptions.py  logger.py
src/gui/: __init__.py  app.py
src/gui/components/: __init__.py  download_item.py  url_input.py  video_card.py
src/gui/pages/: __init__.py  download_page.py  home_page.py  player_page.py  settings_page.py
src/gui/plugins/: __init__.py  base_platform.py  platform_manager.py
src/gui/services/: __init__.py  gui_service.py
src/services/: __init__.py  bilibili.py  downloader.py
src/utils/: __init__.py  file_utils.py  url_utils.py
tests/: __init__.py  test_bilibili.py  test_config.py
tools/: test_ws.py  ws_handshake.py
