[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "video-downloader"
dynamic = ["version"]
description = "A modern video downloading tool with multi-threading support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Video Downloader Team", email = "tekintian@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "yt-dlp>=2025.12.8",
    "click>=8.1.7",
    "rich>=13.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.2",
    "aiohttp>=3.8.5",
    "aiofiles>=23.1.0",
    "pathvalidate>=3.0.0",
]

[project.optional-dependencies]
gui = [
    "flet>=0.17.0",
    "flet[android]>=0.17.0",
    "flet[ios]>=0.17.0",
    "ffpyplayer>=4.3.5",
    "Pillow>=10.0.0",
    "plyer>=2.1.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "buildozer>=1.4.0",
    "flet-pack>=0.6.0",
]

[project.scripts]
video-downloader = "src.cli.main:cli"
vd = "src.cli.main:cli"

[project.urls]
Homepage = "https://github.com/tekintian/video-downloader"
Repository = "https://github.com/tekintian/video-downloader"
Documentation = "https://github.com/tekintian/video-downloader#readme"
"Bug Tracker" = "https://github.com/tekintian/video-downloader/issues"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yt_dlp.*",
    "aiohttp.*",
    "aiofiles.*",
    "tenacity.*",
    "pathvalidate.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/_version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]